Node.js Added yaml example.

--- a/program.htm
+++ b/program.htm
@@ -2426,6 +2426,10 @@ Java</h3>
     ping</a><br>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/java/npm_yaml.htm">
+    yaml</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/java/npm_promise.htm">
     如何透過Promise等待事件完成</a><br>
 
