--- a/program/java/js_write_text.htm
+++ b/program/java/js_write_text.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Javs &gt;&gt; JavaScript</h3>
+<h3>Java &gt;&gt; JavaScript</h3>
 <p><b>Write text file</b></p>
 <hr size="1">
 <p>
