--- a/program/java/applet_hello.htm
+++ b/program/java/applet_hello.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Javs &gt;&gt; Java Applet</h3>
+<h3>Java &gt;&gt; Java Applet</h3>
 <p><b>Hello, world!</b></p>
 <hr size="1">
 <p>
