--- a/program/java/npm_promise.htm
+++ b/program/java/npm_promise.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Javs &gt;&gt; Node.js</h3>
+<h3>Java &gt;&gt; Node.js</h3>
 <p><b>如何透過Promise等待事件完成</b></p>
 <hr size="1">
 <p>
