--- a/handheld.htm
+++ b/handheld.htm
@@ -6697,6 +6697,10 @@ repack uImage.xz</a><br>
     build kernel</a><br>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/cfw_setcpuclock.htm">
+    set cpu clock</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/miyoo-mini-plus/cfw_setpixelclock.htm">
     set pixel clock</a><br>
 
