Miyoo Mini Added teardown images for v4 model.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6401,6 +6401,10 @@ Miyoo Mini</h3>
 拆機(新版)</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini/teardown2.htm">
+拆機(小黃米)</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini/pinout.htm">
 腳位</a><br>
 
