Miyoo Mini Plus How to specify timidity.cfg path.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6659,6 +6659,10 @@ repack uImage.xz</a><br>
 如何透過U-Boot回復SPI資料</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/timidity.htm">
+如何指定timidity.cfg位置</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/find_pin.htm">
 如何透過U-Boot找出按鍵腳位</a><br>
 
