Miyoo Mini Plus How to build libmikmod.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6692,6 +6692,10 @@ repack uImage.xz</a><br>
     <a href="handheld/miyoo-mini-plus/kallsym.htm">
     kallsym</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/build_libmikmod.htm">
+    build libmikmod</a><br>
+
 &oplus;
 <b>Onion</b><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
