Miyoo Mini Plus How to build smpeg.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6693,6 +6693,10 @@ repack uImage.xz</a><br>
     kallsym</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/build_smpeg.htm">
+    build smpeg</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/miyoo-mini-plus/build_libmikmod.htm">
     build libmikmod</a><br>
 
