--- a/handheld/miyoo-mini-plus/build_smpeg.htm
+++ b/handheld/miyoo-mini-plus/build_smpeg.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Miyoo Mini Plus &gt;&gt; Stock</h3>
-<p><b>build libmikmod</b></p>
+<p><b>build smpeg</b></p>
 <hr size="1">
 <p>
 步驟如下：
@@ -69,10 +69,13 @@ $ export HOST=arm-linux
 $ export PKG_CONFIG=/opt/mmiyoo/bin/pkg-config
 
 $ cd
-$ git clone --depth=1 https://github.com/steward-fu/sdl -b libmikmod-3.1.21
+$ git clone --depth=1 https://github.com/steward-fu/sdl -b smpeg-0.4.5
 
 $ cd sdl
 $ ./autogen.sh
+$ vim configure +16870
+    CFLAGS="$CFLAGS -Wno-narrowing"
+
 $ SDL_CONFIG=/opt/mmiyoo/arm-buildroot-linux-gnueabihf/sysroot/usr/bin/sdl-config ./configure --prefix=/opt/mmiyoo/ --host=$HOST
 $ make
 $ make install
