Miyoo Mini Plus How to build sdl-1.2 mixer.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6700,6 +6700,10 @@ repack uImage.xz</a><br>
     <a href="handheld/miyoo-mini-plus/build_libmikmod.htm">
     build libmikmod</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/build_sdlmixer.htm">
+    build libsdl 1.2 mixer</a><br>
+
 &oplus;
 <b>Onion</b><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
