Miyoo Mini Plus How to build sdl-2.0.20 for DraStic emulator.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6704,6 +6704,10 @@ repack uImage.xz</a><br>
     <a href="handheld/miyoo-mini-plus/build_sdlmixer.htm">
     build libsdl 1.2 mixer</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/build_sdl2.htm">
+    build sdl-2.0.20 (DraStic)</a><br>
+
 &oplus;
 <b>Onion</b><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
