Miyoo Mini Plus Refined.

--- a/handheld/miyoo-mini-plus/build_sdl2.htm
+++ b/handheld/miyoo-mini-plus/build_sdl2.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Miyoo Mini Plus &gt;&gt; Stock</h3>
-<p><b>build sdl-2.0.20 (DraStic)</b></p>
+<p><b>build libSDL2-2.0.so.0 (DraStic)</b></p>
 <hr size="1">
 <p>
 步驟如下：
