--- a/handheld.htm
+++ b/handheld.htm
@@ -6705,8 +6705,12 @@ repack uImage.xz</a><br>
     build libsdl 1.2 mixer</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/build_alsa.htm">
+    build libasound.so.2 (DraStic)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/miyoo-mini-plus/build_sdl2.htm">
-    build sdl-2.0.20 (DraStic)</a><br>
+    build libSDL2-2.0.so.0 (DraStic)</a><br>
 
 &oplus;
 <b>Onion</b><br>
