Miyoo Mini Plus How to build midpath.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6697,6 +6697,10 @@ repack uImage.xz</a><br>
     build smpeg</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/build_midpath.htm">
+    build midpath</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/miyoo-mini-plus/build_libmikmod.htm">
     build libmikmod</a><br>
 
