GNU Added ring buffer example.

--- a/program.htm
+++ b/program.htm
@@ -158,6 +158,10 @@ GNU</h3>
     backtrace</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/gnu/cpp_ringbuf.htm">
+    ring buffer</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/gnu/cpp_input_event.htm">
     input_event</a><br>
 
