--- a/program/gnu/cpp_json-c.htm
+++ b/program/gnu/cpp_json-c.htm
@@ -82,7 +82,7 @@ int main(int argc, char **argv)
         val = json_object_get_int(jval);
         printf("new myval: %d\n", val);
 
-        json_object_to_file(JSON_FILE, jfile);
+        json_object_to_file_ext(JSON_FILE, jfile, JSON_C_TO_STRING_PRETTY);
         json_object_put(jfile);
     }
     return 0;
@@ -109,8 +109,11 @@ $ gcc main.c -o test -ljson-c
 $ LD_LIBRARY_PATH=/usr/local/lib/ ./test
     old myval: 1234
     new myval: 5678
+
 $ cat test.json
-    {"myval":5678}
+{
+  "myval":5678
+}
 </pre><br>
 
 <p>
