NDSi Added review page.

--- a/handheld.htm
+++ b/handheld.htm
@@ -192,6 +192,7 @@
     <a href="#gbm"><img src="img/photos/gbm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Game Boy Micro"/></a>
     <a href="#nds"><img src="img/photos/nds.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo DS"/></a>
     <a href="#ndsl"><img src="img/photos/ndsl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo DS Lite"/></a>
+    <a href="#ndsi"><img src="img/photos/ndsi.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo DSi"/></a>
     <a href="#3ds"><img src="img/photos/3ds.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo 3DS"/></a>
     <a href="#3dsll"><img src="img/photos/3dsll.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo 3DS LL"/></a>
     <a href="#new3ds"><img src="img/photos/new3ds.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo New 3DS"/></a>
@@ -5669,6 +5670,15 @@ Nintendo DS Lite</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/ndsl/linux_build.htm">
     build all</a><br>
+<br><br><br><br>
+
+<div id="ndsi"></div>
+<h3><img src="img/photos/ndsi.jpg" class="floatLeft"/>
+Nintendo DSi</h3>
+<hr size="1"><br><br><br><br><br>
+&lowast;
+<a href="handheld/ndsi/review.htm">
+介紹</a><br>
 <br><br><br><br>
 
 <div id="3ds"></div>
