--- a/handheld.htm
+++ b/handheld.htm
@@ -213,6 +213,7 @@
     <a href="#mini-gamer"><img src="img/photos/mini-gamer.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Mini Retro Gamer"/></a>
     <a href="#x350"><img src="img/photos/x350.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="X350"/></a>
     <a href="#xy-8016"><img src="img/photos/xy-8016.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SUPER MARY XY-8016"/></a>
+    <a href="#retroid-flip"><img src="img/photos/retroid-flip.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Retroid Pocket Flip"/></a>
 </p>
 </div>
 
@@ -6945,6 +6946,16 @@ SUPER MARY XY-8016</h3>
 &lowast;
 <a href="handheld/xy-8016/teardown.htm">
 拆機</a><br>
+<br><br><br><br>
+
+<div id="retroid-flip"></div>
+<h3><img src="img/photos/retroid-flip.jpg" class="floatLeft"/>
+Retroid Pocket Flip</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/retroid-flip/review.htm">
+介紹</a><br>
 <br><br><br><br>
 
 </p>
