PINE64 PinePhone Refined.

--- a/phone/pinephone/review.htm
+++ b/phone/pinephone/review.htm
@@ -52,7 +52,7 @@
 簡要規格
 </p>
 <table>
-<tr><th>CPU</th><td>Allwinner A64 64-bit Quad-core 1.2 GHz ARM Cortex A-53</td></tr>
+<tr><th>CPU</th><td>Allwinner A64 (ARM Cortex-A53 1.2GHz x 4)</td></tr>
 <tr><th>GPU</th><td>MALI-400MP2</td></tr>
 <tr><th>RAM</th><td>3GB</td></tr>
 <tr><th>Storage</th><td>32GB</td></tr>
