--- a/picture.htm
+++ b/picture.htm
@@ -192,6 +192,13 @@ minkowski</a><br>
 &lowast;
 <a href="picture/openscad/diff.htm">
 difference</a><br>
+
+&oplus;
+<b>雜項</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/openscad/m2.htm">
+    M.2 2242底座</a><br>
 <br><br><br><br>
 
 <div id="kicad"></div>
