GPD MicroPC How to install debian 12.

--- a/umpc.htm
+++ b/umpc.htm
@@ -2500,6 +2500,17 @@ UART改造</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/gpdwin2/debian9/fix_screen_tear.htm">
     解決Screen Tearing問題</a><br>
+
+&oplus;
+<b>Debian 12</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/micropc/debian12.htm">
+    安裝系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/gpdwin2/debian9/fix_screen_tear.htm">
+    解決Screen Tearing問題</a><br>
 <br><br><br><br>
 
 <div id="gpdp2"></div>
