Retroid Pocket Flip Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6956,6 +6956,10 @@ Retroid Pocket Flip</h3>
 &lowast;
 <a href="handheld/retroid-flip/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/retroid-flip/teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 </p>
