Retroid Pocket Flip Hardware modding.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6960,6 +6960,10 @@ Retroid Pocket Flip</h3>
 &lowast;
 <a href="handheld/retroid-flip/teardown.htm">
 拆機</a><br>
+
+&lowast;
+<a href="handheld/retroid-flip/mod.htm">
+十字鍵、仰角改造</a><br>
 <br><br><br><br>
 
 </p>
