--- a/network/autosar/scapy_udp.htm
+++ b/network/autosar/scapy_udp.htm
@@ -29,7 +29,7 @@
   <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
   
   <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
+  <script type="text/javascript" src="../../scripts/shBrushPython.js"></script>
 
   <!-- Conditional comment to apply opacity fix for IE #content background.
        Invalid CSS, but can be removed without harming design -->
@@ -44,16 +44,65 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Compilers</h3>
-<p><b>pdf</b></p>
+<h3>AUTOSAR &gt;&gt; SOME/IP</h3>
+<p><b>如何使用SCAPY產生UDP PCAP</b></p>
 <hr size="1">
 <p>
-參考資訊：<br>
-1. <a href="http://ce.sharif.edu/courses/94-95/1/ce414-2/resources/root/Text%20Books/Compiler%20Design/Alfred%20V.%20Aho,%20Monica%20S.%20Lam,%20Ravi%20Sethi,%20Jeffrey%20D.%20Ullman-Compilers%20-%20Principles,%20Techniques,%20and%20Tools-Pearson_Addison%20Wesley%20(2006).pdf">pdf</a><br><br>
+參考資料：<br>
+1. <a href="https://some-ip.com/standards.shtml">standards</a><br>
+2. <a href="https://www.autosar.org/fileadmin/standards/R22-11/FO/AUTOSAR_PRS_SOMEIPProtocol.pdf">SOME/IP</a><br>
+3. <a href="https://www.autosar.org/fileadmin/standards/R22-11/CP/AUTOSAR_SWS_SOMEIPTransportProtocol.pdf">Transport</a></a><br>
+4. <a href="https://www.autosar.org/fileadmin/standards/R22-11/FO/AUTOSAR_PRS_SOMEIPServiceDiscoveryProtocol.pdf">ServiceDiscovery</a><br><br>
+
+main.py
+</p>
+<pre class="brush:python">
+import os
+import struct
+from scapy.all import *
+import scapy.all as scapy
+
+data = bytearray(
+    b"\xff\xff\x81\x00"
+    b"\x00\x00\x00\x20"
+    b"\x00\x00\x00\x01"
+    b"\x01\x01\x02\x00"
+
+    b"\x80\x00\x00\x00" # service discovery
+    b"\x00\x00\x00\x10"
+
+    b"\x06\x00\x00\x00" # entry
+    b"\x12\x34\x56\x78"
+    b"\x00\x00\x00\x03"
+    b"\x00\x00\x44\x65"
+)
+
+packet = scapy.Ether() / scapy.IP() / scapy.UDP()
+packet[scapy.IP].dst = "192.168.0.1"
+packet[scapy.IP].src = "192.168.0.2"
+packet[scapy.UDP].dport = 1234
+packet[scapy.UDP].sport = 5678
+packet[scapy.UDP].payload = Packet(data)
+
+try:
+    scapy.wrpcap("test.pcap", packet)
+except Exception as e:
+    print(f"ERR: {e}")
+</pre><br>
+
+<p>
+執行
+</p>
+<pre>
+$ python3 ./main.py
+$ wireshark test.pcap
+</pre>
+<p>
+<img src="scapy_udp/1.jpg" class="maxSize">
 </p>
 
 <p>
-<br><a href="../../handheld.htm">返回上一頁</a>
+<br><a href="../../network.htm">返回上一頁</a>
 </p>
 
 </div>
