SOME/IP How to build vsomeip.

--- a/network.htm
+++ b/network.htm
@@ -90,6 +90,10 @@ AUTOSAR</h3>
 <b>SOME/IP</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="network/autosar/build_vsomeip-3.1.16.1.htm">
+    build vsomeip 3.1.16.1</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="network/autosar/scapy_tcp.htm">
     如何使用SCAPY產生TCP PCAP</a><br>
 
