SOME/IP Refined.

--- a/network/autosar/scapy_tcp.htm
+++ b/network/autosar/scapy_tcp.htm
@@ -86,7 +86,7 @@ packet[scapy.TCP].flags = 'S'
 packet[scapy.TCP].payload = Packet(data)
 
 try:
-    scapy.wrpcap("test.pcap", packet)
+    scapy.wrpcap("test.pcap", packet, append=False)
 except Exception as e:
     print(f"ERR: {e}")
 </pre><br>
