--- a/network/autosar/scapy_udp.htm
+++ b/network/autosar/scapy_udp.htm
@@ -85,7 +85,7 @@ packet[scapy.UDP].sport = 5678
 packet[scapy.UDP].payload = Packet(data)
 
 try:
-    scapy.wrpcap("test.pcap", packet)
+    scapy.wrpcap("test.pcap", packet, append=False)
 except Exception as e:
     print(f"ERR: {e}")
 </pre><br>
