--- a/handheld.htm
+++ b/handheld.htm
@@ -4837,6 +4837,13 @@ dump kernel from memory</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/trimui-smart/asm_pwm0.htm">
     PWM0</a><br>
+
+&oplus;
+<b>C/C++</b><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/trimui-smart/cpp_screentear.htm">
+    Screen Tearing</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
