Trimui Smart UART modding (PL-2303SA).

--- a/handheld/trimui-smart/uart.htm
+++ b/handheld/trimui-smart/uart.htm
@@ -66,6 +66,20 @@
 連接UART<br>
 <img src="uart/6.jpg" class="maxSize"><br><br>
 
+為了方便使用USB Type-C連接，司徒最後改成使用PL-2303SA<br>
+<img src="uart/10.jpg" class="maxSize"><br>
+Miyoo-Mini TXD連接到RX<br>
+Miyoo-Mini RXD連接到TX<br><br>
+
+跳線後<br>
+<img src="uart/7.jpg" class="maxSize"><br><br>
+
+裝上外殼<br>
+<img src="uart/8.jpg" class="maxSize"><br><br>
+
+完成<br>
+<img src="uart/9.jpg" class="maxSize"><br><br>
+
 115200bps
 </p>
 <pre>
@@ -215,7 +229,7 @@ WORK_MODE_BOOT
 addr = 47000000
 sunxi_read_bootlogo: read bootlogo partition successful
 [      1.740]Hit any key to stop autoboot:  0
-fatload partition name: boot -> 2
+fatload partition name: boot -&gt; 2
 reading uImage
 ## Booting kernel from Legacy Image at 40007fc0 ...
    Image Name:   ARM OpenWrt Linux-3.4.39
@@ -290,7 +304,7 @@ Starting kernel ...
 [    0.011112] script config pll_ve to 360 Mhz
 [    0.011125] Not Found clk pll_periph0 in script
 [    0.011131] Not Found clk pll_de in script
-[    0.049444] bio: create slab <bio-0> at 0
+[    0.049444] bio: create slab &lt;bio-0&gt; at 0
 [    0.049762] pwm module init!
 [    0.053795] SCSI subsystem initialized
 [    0.054117] usbcore: registered new interface driver usbfs
@@ -346,7 +360,7 @@ Starting kernel ...
 [    0.071950] bsp_disp_init-----------------1
 [    0.072388] [DISP] disp_get_rotation_sw,line:77:disp 0 out of range? g_rot_sw=0
 [    0.072398] [DISP] disp_init_connections,line:289:NULL pointer: 0, 0
-<[    0.077563] disp_init-----------------2
+[    0.077563] disp_init-----------------2
 [    0.077809] [DISP] lcd_clk_config,line:896:disp 0, clk: pll(340000000),clk(170000000),dclk(17000000) dsi_rate(340000000)
 [    0.078454] [DISP]disp_module_init finish
 [    0.078815] sw_uart_get_devinfo()2038 - uart0 has no uart_regulator.
@@ -430,7 +444,7 @@ Starting kernel ...
 [    1.601932] [audiocodec] headset_mic_vol  type err!
 [    1.607350] *******************Try sdio*******************
 [    1.614506] mmc0: req failed (CMD5): -110, retrying...
-[    1.620629] asoc: sndcodec <-> sunxi-codec mapping ok
+[    1.620629] asoc: sndcodec &lt;-&gt; sunxi-codec mapping ok
 [    1.626356] mmc0: req failed (CMD5): -110, retrying...
 [    1.633093] mmc0: req failed (CMD5): -110, retrying...
 [    1.640122] u32 classifier
@@ -464,7 +478,7 @@ Starting kernel ...
 [    1.794463] mmcblk0: mmc0:0001 8GTF4R 7.28 GiB
 [    1.799569] mmcblk0boot0: mmc0:0001 8GTF4R partition 1 4.00 MiB
 [    1.806281] mmcblk0boot1: mmc0:0001 8GTF4R partition 2 4.00 MiB
-[    1.813808]  mmcblk0: p1 p2 p3 < p5 p6 p7 p8 p9 p10 >
+[    1.813808]  mmcblk0: p1 p2 p3 &lt; p5 p6 p7 p8 p9 p10 &gt;
 [    1.819450] mmcblk0: p1 size 14948352 extends beyond EOD, truncated
 [    1.829067]  mmcblk0boot1: unknown partition table
 [    1.835458]  mmcblk0boot0: unknown partition table
@@ -551,21 +565,21 @@ t
 [    6.060762] [DISP] var_to_disp_fb,line:503:invalid bits_per_pixel :8
 [    6.068131] [DISP] var_to_disp_fb,line:503:invalid bits_per_pixel :8
 [    6.075737] [DISP] var_to_disp_fb,line:503:invalid bits_per_pixel :8
-[    6.083035] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.095807] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.108382] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.121180] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.138747] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.151457] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.164259] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.176876] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.189651] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.202207] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.214966] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.227563] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.240352] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.252918] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
-[    6.265682] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:24,red.offset:16,green.offset:8,blue.offset:0>
+[    6.083035] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.095807] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.108382] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.121180] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.138747] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.151457] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.164259] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.176876] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.189651] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.202207] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.214966] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.227563] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.240352] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.252918] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
+[    6.265682] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:24,red.offset:16,green.offset:8,blue.offset:0&gt;
 sdl audio
 SDL_AudioInit(nil), flags 21, SDL_initialized 21
 SDL_AudioInit(nil) ok
@@ -595,8 +609,8 @@ period_time:0, period_frames:0
 ============================================
 buffer_time:0, buffer_frames:5644
 [setparam] buffer_time=0
-[setparam] buffer_frames=37[    6.521599] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:0,red.offset:0,green.offset:0,blue.offset:0>
-[    6.521620] [DISP] var_to_disp_fb,line:497:[FB]invalid format<transp.offset:0,red.offset:0,green.offset:0,blue.offset:0>
+[setparam] buffer_frames=37[    6.521599] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:0,red.offset:0,green.offset:0,blue.offset:0&gt;
+[    6.521620] [DISP] var_to_disp_fb,line:497:[FB]invalid format&lt;transp.offset:0,red.offset:0,green.offset:0,blue.offset:0&gt;
 63
 ============================================
 after period size
@@ -631,7 +645,7 @@ read lang file /usr/trimui/res/lang/en.lang ok=1
 genShortLangFile en.lang index 0, size 1
 read lang file /usr/trimui/res/lang/ch.lang ok=1
 genShortLangFile ch.lang index 1, size 2
-battery mode 0x00000000 -> 0x00c0004d
+battery mode 0x00000000 -&gt; 0x00c0004d
 dir is (null)
 open /mnt/SDCARD/Emus
 open /mnt/UDISK/Emus
@@ -640,7 +654,7 @@ open /mnt/UDISK/Apps
 set card 0 ctl 2 to 6
 setup_keymap 0 A,B,X,Y,L,R
 setLCDBrightness 255
-restore background music volume 64 -> 128
+restore background music volume 64 -&gt; 128
 try to restore
 open /tmp/state.json fail
 nothing to restore
