Miyoo Mini How to flash SPI via CH341A programmer.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6455,6 +6455,10 @@ SDL Key</a><br>
 焊接UART腳位(PL-2303SA)</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini/ch341a.htm">
+如何透過CH341A燒錄器回復SPI資料</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini/ondemand.htm">
 為何scaling_governor總是在ondemand</a><br>
 
