C# Added a hello example.

--- a/program.htm
+++ b/program.htm
@@ -93,6 +93,7 @@
     <a href="#hildon"><img src="img/photos/hildon.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Hildon"/></a>
     <a href="#vc"><img src="img/photos/vc.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Visual C++"/></a>
     <a href="#vb"><img src="img/photos/vb.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Visual Basic"/></a>
+    <a href="#csharp"><img src="img/photos/csharp.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="C#"/></a>
     <a href="#mcu8051ide"><img src="img/photos/mcu8051ide.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MCU 8051 IDE"/></a>
     <a href="#ucblogo"><img src="img/photos/ucblogo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Berkeley Logo (UCBLogo)"/></a>
     <a href="#java"><img src="img/photos/java.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Java"/></a>
@@ -2372,6 +2373,16 @@ On Error Goto</a><br>
 &lowast;
 <a href="program/vb/delete_comp_array.htm">
 刪除元件陣列</a>
+<br><br><br><br>
+
+<div id="csharp"></div>
+<h3><img src="img/photos/csharp.jpg" class="floatLeft"/>
+C#</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="program/csharp/hello.htm">
+Hello, world!</a><br>
 <br><br><br><br>
 
 <div id="mcu8051ide"></div>
