--- a/handheld.htm
+++ b/handheld.htm
@@ -145,7 +145,7 @@
     <a href="#psp1007"><img src="img/photos/psp1007.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PSP 1007"/></a>
     <a href="#psp2007"><img src="img/photos/psp2007.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PSP 2007"/></a>
     <a href="#pspgo"><img src="img/photos/pspgo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PSP Go"/></a>
-    <a href="#psv"><img src="img/photos/psv.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PS Vita"/></a>
+    <a href="#psv"><img src="img/photos/psv.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PlayStation Vita"/></a>
     <a href="#funkeys"><img src="img/photos/funkeys.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="FunKey S"/></a>
     <a href="#pico"><img src="img/photos/pico.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PicoSystem"/></a>
     <a href="#ggm"><img src="img/photos/ggm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Game Gear Micro"/></a>
@@ -4061,16 +4061,12 @@ HTC Kaiser 3.7V 1250mA電池</a><br>
 
 <div id="psv"></div>
 <h3><img src="img/photos/psv.jpg" class="floatLeft"/>
-PS Vita</h3>
+PlayStation Vita</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
 <a href="handheld/psv/review.htm">
 介紹</a><br>
-
-&lowast;
-<a href="handheld/psv/analog_pinout.htm">
-類比搖桿Pinout</a><br>
 <br><br><br><br>
 
 <div id="funkeys"></div>
