--- a/handheld/psv/review.htm
+++ b/handheld/psv/review.htm
@@ -45,18 +45,18 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>PS Vita</h3>
+<h3>PlayStation Vita</h3>
 <p><b>介紹</b></p>
 <hr size="1">
 <p>簡要規格</p>
 <table>
-  <tr><th>CPU</th><td>Quad-core ARM Coretex-A9 MPCore</td></tr>
-  <tr><th>GPU</th><td>Quad-core PowerVR SGX543MP4+</td></tr>
+  <tr><th>CPU</th><td>ARM Coretex-A9 x 4</td></tr>
+  <tr><th>GPU</th><td>PowerVR SGX543MP4</td></tr>
   <tr><th>RAM</th><td>512MB</td></tr>
   <tr><th>VRAM</th><td>128MB</td></tr>
   <tr><th>Screen</th><td>5.0" 960x544 (Capacitive Touch)</td></tr>
   <tr><th>Slot</th><td>PS Vita Memory Card</td></tr>
-  <tr><th>Gamepad</th><td>DPad, 4 Buttons, Start, Select, L1, R1 and Analog Stick</td></tr>
+  <tr><th>Gamepad</th><td>DPad, 4 Buttons, Start, Select, L1, R1</td></tr>
   <tr><th>Port</th><td>Customized</td></tr>
   <tr><th>Bluetooth</th><td>v2.1 + EDR</td></tr>
   <tr><th>WLAN</th><td>Wi-Fi 802.11 b/g/n</td></tr>
