Trimui Smart Added screen scaling example.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4836,10 +4836,14 @@ dump kernel from memory</a><br>
 
 &oplus;
 <b>C/C++</b><br>
-    
+
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/trimui-smart/cpp_screentear.htm">
     Screen Tearing</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/trimui-smart/cpp_screenscale.htm">
+    Screen Scaling</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
