Trimui Smart Refined.

--- a/handheld/trimui-smart/cpp_screenscale.htm
+++ b/handheld/trimui-smart/cpp_screenscale.htm
@@ -408,7 +408,7 @@ static void ion_free(int ion_fd, ion_alloc_info_t* info)
     close(info-&gt;fd);
     ihd.handle = info-&gt;handle;
     if (ioctl(ion_fd, ION_IOC_FREE, &amp;ihd) &lt; 0) {
-        printf("failed to call ION_ION_FREE failed %s\n");
+        printf("failed to call ION_ION_FREE\n");
     }
 }
   
