--- a/handheld.htm
+++ b/handheld.htm
@@ -4688,6 +4688,10 @@ UART腳位</a><br>
 如何關閉LED</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/volume.htm">
+如何設定音量</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/led.htm">
 改善LED太亮的問題</a><br>
 
