Game Boy Refined.

--- a/emu/gb/asm_min.htm
+++ b/emu/gb/asm_min.htm
@@ -59,43 +59,43 @@ main.s
 </p>
 <pre class="brush:asm">
 section "vblank", rom0[$0040]
-  reti
+    reti
 
 section "lcdc", rom0[$0048]
-  reti
+    reti
 
 section "timer", rom0[$0050]
-  reti
+    reti
 
 section "serial", rom0[$0058]
-  reti
+    reti
 
 section "joypad", rom0[$0060]
-  reti
+    reti
 
 section "entry", rom0[$0100]
-  nop
-  jp _start
+    nop
+    jp _start
 
 section "header", rom0[$0104]
-  db $ce, $ed, $66, $66, $cc, $0d, $00, $0b, $03, $73, $00, $83, $00, $0c, $00, $0d
-  db $00, $08, $11, $1f, $88, $89, $00, $0e, $dc, $cc, $6e, $e6, $dd, $dd, $d9, $99
-  db $bb, $bb, $67, $63, $6e, $0e, $ec, $cc, $dd, $dc, $99, $9f, $bb, $b9, $33, $3e
-  db "0123456789abcde"
-  db 0
-  db 0, 0
-  db 0
-  db 0
-  db 0
-  db 0
-  db 1
-  db $33
-  db 0
-  db 0
-  dw 0
+    db $ce, $ed, $66, $66, $cc, $0d, $00, $0b, $03, $73, $00, $83, $00, $0c, $00, $0d
+    db $00, $08, $11, $1f, $88, $89, $00, $0e, $dc, $cc, $6e, $e6, $dd, $dd, $d9, $99
+    db $bb, $bb, $67, $63, $6e, $0e, $ec, $cc, $dd, $dc, $99, $9f, $bb, $b9, $33, $3e
+    db "0123456789abcde"
+    db 0
+    db 0, 0
+    db 0
+    db 0
+    db 0
+    db 0
+    db 1
+    db $33
+    db 0
+    db 0
+    dw 0
 
 _start:
- jp @
+    jp @
 </pre>
 <p>
 一個精簡的程式框架<br><br>
@@ -113,7 +113,7 @@ $ rgbfix -v -p0 main.gb
 <img src="asm_min/1.jpg" class="maxSize"><br>
 為何會有Nintendo的字串呢？<br><br>
 
-在bgb視窗上按滑鼠右鍵，選擇<b>Other</b> &gt; <b>VRAM Viewer</b><br>
+在bgb視窗上按滑鼠右鍵，選擇<b>Other</b> =&gt; <b>VRAM Viewer</b><br>
 <img src="asm_min/2.jpg" class="maxSize"><br>
 可以看到有很多開機預設載入的Tile，R商標是位於0x19位置，這也是為何會顯示Nintendo字串的原因
 </p>
