PSV How build toolchain.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4067,6 +4067,10 @@ PlayStation Vita</h3>
 &lowast;
 <a href="handheld/psv/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/psv/build_toolchain.htm">
+build toolchain</a><br>
 <br><br><br><br>
 
 <div id="funkeys"></div>
