--- a/handheld/psv2000/build_toolchain.htm
+++ b/handheld/psv2000/build_toolchain.htm
@@ -45,7 +45,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>PlayStation Vita</h3>
+<h3>PlayStation Vita 2000</h3>
 <p><b>build toolchain</b></p>
 <hr size="1">
 <p>簡要規格</p>
