--- a/handheld/psv2000/review.htm
+++ b/handheld/psv2000/review.htm
@@ -45,7 +45,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>PlayStation Vita 1000</h3>
+<h3>PlayStation Vita 2000</h3>
 <p><b>介紹</b></p>
 <hr size="1">
 <p>簡要規格</p>
@@ -54,15 +54,16 @@
   <tr><th>GPU</th><td>PowerVR SGX543MP4</td></tr>
   <tr><th>RAM</th><td>512MB</td></tr>
   <tr><th>VRAM</th><td>128MB</td></tr>
+  <tr><th>Flash</th><td>1GB</td></tr>
   <tr><th>Screen</th><td>5.0" 960x544 (Capacitive Touch)</td></tr>
-  <tr><th>Slot</th><td>PS Vita Memory Card</td></tr>
-  <tr><th>Gamepad</th><td>DPad, 4 Buttons, Start, Select, L1, R1</td></tr>
-  <tr><th>Port</th><td>Customized</td></tr>
+  <tr><th>Slot</th><td>PSV Game and Memory Card</td></tr>
+  <tr><th>Gamepad</th><td>DPad, 4 Buttons, Start, Select, L1 and R1</td></tr>
+  <tr><th>Port</th><td>Micro USB</td></tr>
   <tr><th>Bluetooth</th><td>v2.1 + EDR</td></tr>
   <tr><th>WLAN</th><td>Wi-Fi 802.11 b/g/n</td></tr>
-  <tr><th>Battery</th><td>3.7V 2200mA</td></tr>
-  <tr><th>Dimension</th><td>182mm x 83.55mm x 18.6mm</td></tr>
-  <tr><th>Weight</th><td>260g</td></tr>
+  <tr><th>Battery</th><td>3.7V 2210mA</td></tr>
+  <tr><th>Dimension</th><td>184mm x 85mm x 15mm</td></tr>
+  <tr><th>Weight</th><td>219g</td></tr>
 </table><br>
 
 <p>
