--- a/emu/gbc/compare.htm
+++ b/emu/gbc/compare.htm
@@ -45,7 +45,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Game Boy</h3>
+<h3>Game Boy Color</h3>
 <p><b>比較表</b></p>
 <hr size="1">
 <p>
