Game Boy Color Refined.

--- a/emu/gbc/cpp_font.htm
+++ b/emu/gbc/cpp_font.htm
@@ -54,7 +54,7 @@
 2. <a href="http://gbdk.sourceforge.net/doc/html/book01.html">doc</a><br>
 3. <a href="https://github.com/mrombout/gbdk_playground">gbdk_playground</a><br><br>
 
-Font Library支援的繪圖Function
+Font Functions
 </p>
 <pre class="brush:cpp">
 extern UINT8 font_ibm[];
@@ -79,10 +79,10 @@ unsigned short palette[] = {RGB_WHITE, RGB_RED, RGB_GREEN, RGB_BLUE};
 
 void main(void)
 {
-  font_init();
-  font_set(font_load(font_spect));
-  set_bkg_palette(0, 1, palette);
-  printf("New font!");
+    font_init();
+    font_set(font_load(font_spect));
+    set_bkg_palette(0, 1, palette);
+    printf("New font!");
 }
 </pre><br>
 <p>
