--- a/emu/gbc/cpp_hello.htm
+++ b/emu/gbc/cpp_hello.htm
@@ -75,8 +75,8 @@ unsigned short palette[] = {RGB_YELLOW, RGB_RED, RGB_GREEN, RGB_BLUE};
 
 void main(void)
 {
-  set_bkg_palette(0, 1, palette);
-  printf("Hello, world!");
+    set_bkg_palette(0, 1, palette);
+    printf("Hello, world!");
 }
 </pre><br>
 
@@ -95,7 +95,7 @@ $ rgbfix -v -p0 main.gb
 執行bgb.exe，然後在bgb視窗上，按滑鼠右鍵，選擇<b>Load ROM...</b>，載入main.gb<br>
 <img src="cpp_hello/1.jpg" class="maxSize"><br><br>
 
-在bgb視窗上按滑鼠右鍵，選擇<b>Other</b> > <b>VRAM Viewer</b>，可以查看目前設定的Palette<br>
+在bgb視窗上按滑鼠右鍵，選擇<b>Other</b> =&gt; <b>VRAM Viewer</b>，可以查看目前設定的Palette<br>
 <img src="cpp_hello/2.jpg" class="maxSize">
 </p>
 
