--- a/emu/gbc/cpp_drawing.htm
+++ b/emu/gbc/cpp_drawing.htm
@@ -54,7 +54,7 @@
 2. <a href="http://gbdk.sourceforge.net/doc/html/book01.html">doc</a><br>
 3. <a href="https://github.com/mrombout/gbdk_playground">gbdk_playground</a><br><br>
 
-Drawing Library支援的繪圖Function
+Drawing Functions
 </p>
 <pre class="brush:cpp">
 #define WHITE    0
@@ -88,18 +88,18 @@ unsigned short palette[] = {RGB_WHITE, RGB_RED, RGB_GREEN, RGB_BLUE};
 
 void main(void)
 {
-  set_bkg_palette(0, 1, palette);
-  color(BLACK, WHITE, SOLID);
-   
-  plot_point(3, 4);
-  line(40, 40, 50, 50);
-  circle(100, 60, 30, M_FILL);
-  box(120, 125, 125, 135, M_NOFILL);
-   
-  gotogxy(18, 15);
-  gprintf("Hi");
-   
-  plot(1, 1, 3, SOLID);
+    set_bkg_palette(0, 1, palette);
+    color(BLACK, WHITE, SOLID);
+
+    plot_point(3, 4);
+    line(40, 40, 50, 50);
+    circle(100, 60, 30, M_FILL);
+    box(120, 125, 125, 135, M_NOFILL);
+
+    gotogxy(18, 15);
+    gprintf("Hi");
+
+    plot(1, 1, 3, SOLID);
 }
 </pre>
 <p>
