Game Boy Advance Refined.

--- a/handheld.htm
+++ b/handheld.htm
@@ -5639,7 +5639,12 @@ Game Boy Advance</h3>
 
 &lowast;
 <a href="handheld/gba/lcd.htm">
-更換高亮度螢幕</a>
+更換高亮度螢幕</a><br>
+
+&lowast;
+<a href="handheld/gba/build_gbatool.htm">
+build gbatool</a><br>
+
 <br><br><br><br>
 
 <div id="gbasp"></div>
