--- a/handheld/gba/review.htm
+++ b/handheld/gba/review.htm
@@ -53,10 +53,9 @@
 
 簡要規格
 </p>
-
 <table>
-  <tr><th>CPU</span></td><td>ARM7TDMI 16.78MHz + Z80 8Bit 4MHz</td></tr>
-  <tr><th>RAM</span></td><td>32KB RAM, VRAM 96KB, WRAM 256KB</td></tr>
+  <tr><th>CPU</span></td><td>ARM7 16.78MHz and Z80 4MHz</td></tr>
+  <tr><th>RAM</span></td><td>32KB RAM, VRAM 96KB and WRAM 256KB</td></tr>
   <tr><th>Screen</span></td><td>2.9" 240x160</td></tr>
   <tr><th>Gamepad</span></td><td>DPad, 2 Buttons, Start, Select, L1 and R1</td></tr>
   <tr><th>Battery</span></td><td>AA x 2</td></tr>
