--- a/handheld/gba/build_gbatool.htm
+++ b/handheld/gba/build_gbatool.htm
@@ -62,7 +62,7 @@ $ sudo make install
 </pre><br>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
