Nintendo DS Lite Refined.

--- a/handheld/ndsl/build_devkitpro.htm
+++ b/handheld/ndsl/build_devkitpro.htm
@@ -46,24 +46,58 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo DS Lite</h3>
-<p><b>build libfat</b></p>
+<p><b>build devkitpro</b></p>
 <hr size="1">
 <p>
 步驟如下：
 </p>
 <pre>
-$ export DEVKITPRO=/opt/devkitpro/
-$ export DEVKITARM=/opt/devkitpro/devkitARM/
+$ sudo chmod 0777 /opt
 
 $ cd
-$ git clone https://github.com/devkitPro/libfat
-$ cd libfat
-$ make
-$ make install
-</pre><br>
+$ git clone https://github.com/devkitPro/buildscripts devkitpro_build
+$ cd devkitpro_build
+$ wget https://wii.leseratte10.de/devkitPro/devkitARM/devkitarm-rules/devkitarm-rules-1.2.1.tar.gz
+$ wget https://wii.leseratte10.de/devkitPro/devkitARM/devkitarm-rules/devkitarm-crtls-1.1.1.tar.gz
+$ wget https://ftp.gnu.org/gnu/binutils/binutils-2.39.tar.xz
+$ wget https://ftp.gnu.org/gnu/gcc/gcc-12.2.0/gcc-12.2.0.tar.xz
+$ ./build-devkit.sh
+  Please select the toolchain you require
+
+  1: devkitARM (gba gp32 ds 3ds)
+  2: devkitPPC (gamecube wii wii-u)
+  3: devkitA64 (switch)
+  1
+
+  Please enter the directory where you would like 'devkitARM' to be installed:
+  for mingw/msys you must use &lt;drive&gt;:/&lt;install path&gt; or you will have include path problems
+  this is the top level directory for devkitpro, i.e. e:/devkitPro
+  /opt/devkitpro
+
+  use /usr/bin/make as make
+
+  Ready to install devkitARM in /opt/devkitARM
+
+  press return to continue
+ 
+  Would you like to delete the build folders and patched sources? [Y/n]
+
+  Removing patched sources and build directories
+
+  note: Add the following to your environment;
+
+    DEVKITPRO=/opt/devkitpro
+    DEVKITARM=/opt/devkitpro/devkitARM
+
+$ /opt/devkitpro/devkitARM/bin/arm-none-eabi-gcc -v
+  gcc version 11.1.0 (devkitARM release 56)
+</pre>
+<p>
+P.S. 如果不想手動編譯，可以直接使用從docker提取的檔案(<a href="https://github.com/steward-fu/ndsl/releases/download/v1.0/devkitpro_elf_x64.tar.gz">devkitpro_elf_x64.tar.gz</a>)
+</p>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
