--- a/handheld/ndsl/build_libfat.htm
+++ b/handheld/ndsl/build_libfat.htm
@@ -46,7 +46,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo DS Lite</h3>
-<p><b>build libnds</b></p>
+<p><b>build libfat</b></p>
 <hr size="1">
 <p>
 步驟如下：
@@ -56,14 +56,14 @@ $ export DEVKITPRO=/opt/devkitpro/
 $ export DEVKITARM=/opt/devkitpro/devkitARM/
 
 $ cd
-$ git clone https://github.com/devkitPro/libnds
-$ cd libnds
+$ git clone https://github.com/devkitPro/libfat
+$ cd libfat
 $ make
 $ make install
 </pre><br>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
