--- a/handheld/ndsl/build_maxmod.htm
+++ b/handheld/ndsl/build_maxmod.htm
@@ -46,25 +46,24 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo DS Lite</h3>
-<p><b>build grit</b></p>
+<p><b>build maxmod</b></p>
 <hr size="1">
 <p>
 步驟如下：
 </p>
 <pre>
-$ sudo apt-get install libfreeimage-dev -y
+$ export DEVKITPRO=/opt/devkitpro/
+$ export DEVKITARM=/opt/devkitpro/devkitARM/
 
 $ cd
-$ git clone https://github.com/devkitPro/grit
-$ cd grit
-$ ./autogen.sh
-$ ./configure
+$ git clone https://github.com/devkitPro/maxmod
+$ cd maxmod
 $ make
-$ sudo make install
+$ make install
 </pre><br>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
