--- a/handheld/ndsl/build_ndstool.htm
+++ b/handheld/ndsl/build_ndstool.htm
@@ -46,15 +46,15 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo DS Lite</h3>
-<p><b>build mmutil</b></p>
+<p><b>build ndstool</b></p>
 <hr size="1">
 <p>
 步驟如下：
 </p>
 <pre>
 $ cd
-$ git clone https://github.com/devkitPro/mmutil
-$ cd mmutil
+$ git clone https://github.com/devkitPro/ndstool
+$ cd ndstool
 $ ./autogen.sh
 $ ./configure
 $ make
@@ -62,7 +62,7 @@ $ sudo make install
 </pre><br>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
