--- a/handheld/ndsl/fix_rules.htm
+++ b/handheld/ndsl/fix_rules.htm
@@ -124,7 +124,7 @@ void GetDefaultArm7(char* buffer, size_t size)
 </p>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
