--- a/handheld/ndsl/fix_syscall.htm
+++ b/handheld/ndsl/fix_syscall.htm
@@ -94,7 +94,7 @@ make: *** [Makefile:22: release] Error 1
 </p>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
