--- a/handheld.htm
+++ b/handheld.htm
@@ -5696,6 +5696,54 @@ Nintendo DS Lite</h3>
 <a href="handheld/ndsl/teardown.htm">
 拆機</a><br>
 
+&lowast;
+<a href="handheld/ndsl/build_grit.htm">
+build grit</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_libnds.htm">
+build libnds</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_libfat.htm">
+build libfat</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_dswifi.htm">
+build dswifi</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_mmutil.htm">
+build mmutil</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_maxmod.htm">
+build maxmod</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_ndstool.htm">
+build ndstool</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_devkitpro.htm">
+build devkitpro</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_nds-examples.htm">
+build nds-examples</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_general-tools.htm">
+build general-tools</a><br>
+
+&lowast;
+<a href="handheld/ndsl/fix_rules.htm">
+解決"failed to open input file: /opt/devkitpro/libnds/default.elf"問題</a><br>
+
+&lowast;
+<a href="handheld/ndsl/fix_syscall.htm">
+解決"initSystem.c: error: __SYSCALL declared as function returning a function"問題</a><br>
+
 &oplus;
 <b>Linux</b><br>
     
