--- a/handheld/ndsl/build_dswifi.htm
+++ b/handheld/ndsl/build_dswifi.htm
@@ -63,7 +63,7 @@ $ make install
 </pre><br>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
