--- a/handheld/ndsl/build_general-tools.htm
+++ b/handheld/ndsl/build_general-tools.htm
@@ -46,24 +46,26 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo DS Lite</h3>
-<p><b>build maxmod</b></p>
+<p><b>build general-tools</b></p>
 <hr size="1">
 <p>
 步驟如下：
 </p>
 <pre>
-$ export DEVKITPRO=/opt/devkitpro/
-$ export DEVKITARM=/opt/devkitpro/devkitARM/
-
 $ cd
-$ git clone https://github.com/devkitPro/maxmod
-$ cd maxmod
+$ git clone https://github.com/devkitPro/general-tools
+$ cd general-tools
+$ ./autogen.sh
+$ ./configure
 $ make
-$ make install
-</pre><br>
+$ sudo make install
+</pre>
+<p>
+P.S. 假如沒有編譯安裝general-tools，之後編譯程式時，將會遇到<b>/bin/sh: bin2s: command not found</b>錯誤
+</p>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
