--- a/handheld/ndsl/build_libnds.htm
+++ b/handheld/ndsl/build_libnds.htm
@@ -46,26 +46,24 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo DS Lite</h3>
-<p><b>general-tools</b></p>
+<p><b>build libnds</b></p>
 <hr size="1">
 <p>
 步驟如下：
 </p>
 <pre>
+$ export DEVKITPRO=/opt/devkitpro/
+$ export DEVKITARM=/opt/devkitpro/devkitARM/
+
 $ cd
-$ git clone https://github.com/devkitPro/general-tools
-$ cd general-tools
-$ ./autogen.sh
-$ ./configure
+$ git clone https://github.com/devkitPro/libnds
+$ cd libnds
 $ make
-$ sudo make install
-</pre>
-<p>
-P.S. 假如沒有編譯安裝general-tools，之後編譯程式時，將會遇到<b>/bin/sh: bin2s: command not found</b>錯誤
-</p>
+$ make install
+</pre><br>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
